1999-10-02  OKUJI Yoshinori  <okuji@kuicr.kyoto-u.ac.jp>

	Now it is possible to build the grub shell with old BSD curses.
	
	* stage2/shared.h [!A_NORMAL] (A_NORMAL): Set to zero.
	[!A_REVERSE && A_STANDOUT] (A_REVERSE): Set to A_STANDOUT.
	[!A_REVERSE && !A_STANDOUT] (A_REVERSE): Set to zero.
	
1999-09-30  Pavel Roskin  <pavel_roskin@geocities.com>

	* stage2/disk_io.c (set_bootdev): Mask 0x7F instead of 0x79 of
	the device number.
	
1999-10-01  OKUJI Yoshinori  <okuji@kuicr.kyoto-u.ac.jp>

	* configure.in (--without-curses): New option. If WITH_CURSES is
	no, do not check for curses.
	
	* stage2/disk_io.c (set_device) [STAGE1_5]: Change the type of
	DEV to unsigned long.
	* stage2/builtins.c (install_func): Always check for the Stage 2
	id in FILE.
	Reported by Pavel Roskin.
	
1999-09-30  Gordon Matzigkeit  <gord@fig.org>

	* debian/postinst: New file to call install-info.
	* debian/prerm: Likewise.
	* debian/rules (binary-arch): Add postinst and prerm, compress the
	info files, and call dpkg-shlibdeps.

	* stage2/cmdline.c (skip_to): Restructure, and count tabs as
	whitespace.
	(find_command): Likewise.

1999-09-30  OKUJI Yoshinori  <okuji@kuicr.kyoto-u.ac.jp>

	* grub/getopt.c: Moved to ...
	* lib/getopt.c: ... here.
	* grub/getopt1.c: Moved to ...
	* lib/getopt1.c: ... here.
	* grub/getopt.h: Moved to ...
	* lib/getopt.h: ... here.
	* grub/Makefile.am (AM_CFLAGS): Added -I$(top_srcdir)/lib.
	(grub_LDADD): Added ../lib/libcommon.a.
	* lib/Makefile.am: New file.
	* Makefile.am (SUBDIRS): Added lib.
	* configure.in: lib/Makefile is added into the arguments for
	AC_OUTPUT.

1999-09-30  OKUJI Yoshinori  <okuji@kuicr.kyoto-u.ac.jp>

	From Pavel Roskin:
	* stage2/defs.h (time_t): Renamed to ...
	(mach_time_t): ... this.
	(daddr_t): Renamed to ...
	(mach_daddr_t): ... this.
	(uid_t): Renamed to ...
	(mach_uid_t): ... this.
	(gid_t): Renamed to ...
	(mach_gid_t): ... this.
	(ino_t): Renamed to ...
	(mach_ino_t): ... this.